--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,6 +3,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+/* HEADER */
+
 header{
     display: flex;
     justify-content: space-between;
@@ -56,4 +58,126 @@ header{
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+/* FOOTER */
+
+.footer-top{
+    padding: 86px 110px 54px 110px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.f-logo{
+    display: flex;
+    flex-direction: column;
+    gap: 26px;
+    width: 372px;
+}
+
+.f-logo p:first-child{
+    color: #00329B;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.f-logo p:nth-last-child(-n +2){
+    color: #515151;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.f-about-us{
+    width: 90px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.f-about-us p:first-child{
+    color: #000;
+    font-family: Poppins;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.f-about-us p:last-child{
+    color: #515151;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 186.3%; /* 29.808px */
+}
+
+.f-contact-us{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 282px;
+}
+
+.f-contact-us p{
+    color: #000;
+    font-family: Poppins;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.f-contact-us-par{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.f-contact-us-par p{
+    color: #515151;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.f-socials{
+    display: flex;
+    align-items: end;
+    gap: 16px;
+}
+
+.socials{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 34px;
+    height: 34px;
+    border-radius: 17px;
+    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.15);
+}
+
+.socials img{
+    width: 12px;
+}
+
+.footer-bottom{
+    display: flex;
+    justify-content: center;
+    padding: 28px 0;
+    border-top: solid 0.8px #D2D2D2;
+    color: #686868;
+    font-family: Poppins;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 190.6%; /* 24.778px */
 }
