--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -112,11 +112,11 @@
   z-index: -1;
 }
 
-.vector2{
+/* .vector2{
   position: absolute;
   right: 1184px;
   top: 270px;
-}
+} */
 
 .vector1{
   position: absolute;
