--- a/assets/css/about-us.css
+++ b/assets/css/about-us.css
@@ -5,3 +5,100 @@
 .pages ul li:nth-child(2) a {
     color: #1090cb;
 }
+
+.about-us{
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  margin-bottom: 220px;
+}
+
+.about-us-top{
+  padding: 156px 132px 0 90px;
+  display: flex;
+  justify-content: space-between;
+  gap: 70px;
+}
+
+.about-us-top-l{
+  display: flex;
+  gap: 50px;
+  align-items: end;
+}
+
+.about-us-top-l img:first-child{
+  height: 259px;
+}
+
+.about-us-top-r{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.about-us-par{
+  display: flex;
+  flex-direction: column;
+  gap: 38px;
+}
+
+.about-us-top-r h1{
+  color: #1090CB;
+  font-family: Poppins;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.about-us-par p:first-child{
+  color: #252525;
+  font-family: Poppins;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 170%; /* 68px */
+}
+
+.about-us-par p:last-child{
+  color: #868686;
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 175%; /* 31.5px */
+}
+
+.about-us-bottom{
+  padding: 0 162px;
+  display: flex;
+  gap: 52px;
+}
+
+.lorem-text{
+  padding-left: 122px;
+  gap: 48px;
+  display: flex;
+  flex-direction: column;
+}
+
+.lorem-text h2{
+  width: 807px;
+  color: #1090CB;
+  font-family: Poppins;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 160%; /* 72px */
+}
+
+.lorem-text p{
+  width: 1014px;
+  color: #585858;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 200%; /* 40px */
+}
