--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -45,7 +45,23 @@ header{
     position: absolute;
     left: -9px;
     top: -2px;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-name: change-opacity;
   }
+
+@keyframes change-opacity {
+    from{
+        opacity: 1;
+    }
+    50%{
+        opacity: 0.6;
+        top: 4px;
+    }
+    75%{
+        height: 6px;
+    }
+}
 
 .pages ul li a{
     color: #000;
