--- a/assets/css/about-us.css
+++ b/assets/css/about-us.css
@@ -3,7 +3,7 @@
 }
 
 .pages ul li:nth-child(2) a {
-    color: #1090cb;
+    color: var(--mainBlue);
 }
 
 .about-us{
@@ -44,7 +44,7 @@
 }
 
 .about-us-top-r h1{
-  color: #1090CB;
+  color: var(--mainBlue);
   font-family: Poppins;
   font-size: 25px;
   font-style: normal;
@@ -53,7 +53,7 @@
 }
 
 .about-us-par p:first-child{
-  color: #252525;
+  color: var(--Black101);
   font-family: Poppins;
   font-size: 40px;
   font-style: normal;
@@ -62,7 +62,7 @@
 }
 
 .about-us-par p:last-child{
-  color: #868686;
+  color: var(--Brown200);
   font-family: Poppins;
   font-size: 18px;
   font-style: normal;
@@ -86,7 +86,7 @@
 
 .lorem-text h2{
   width: 807px;
-  color: #1090CB;
+  color: var(--mainBlue);
   font-family: Poppins;
   font-size: 45px;
   font-style: normal;
@@ -96,7 +96,7 @@
 
 .lorem-text p{
   width: 1014px;
-  color: #585858;
+  color: var(--Grey200);
   font-family: Poppins;
   font-size: 20px;
   font-style: normal;
@@ -116,7 +116,7 @@
   top: -28px;
   width: 54px;
   height: 5px;
-  background: #4628A4;
+  background: var(--Purple200);
 }
 
 .lorem-section-l{
@@ -134,7 +134,7 @@
 }
 
 .lorem-section-text h3{
-  color: #000;
+  color: var(--textBlack);
   font-family: Poppins;
   font-size: 30px;
   font-style: normal;
@@ -143,7 +143,7 @@
 }
 
 .lorem-section-text p{
-  color: #585858;
+  color: var(--Grey200);
   font-family: Poppins;
   font-size: 20px;
   font-style: normal;
@@ -155,9 +155,9 @@
   width: 194px;
   padding: 10px 52px;
   border-radius: 10px;
-  border: 1px solid #1090CB;
-  background: #FFF;
-  color: #1090CB;
+  border: 1px solid var(--mainBlue);
+  background: var(--White100);
+  color: var(--mainBlue);
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
@@ -171,8 +171,8 @@
   align-items: center;
   gap: 56px;
   padding: 0 60px;
-  background: #FFF;
-  box-shadow: 0px 4px 124px 0px rgba(0, 0, 0, 0.10);
+  background: var(--White100);
+  box-shadow: 0px 4px 124px 0px var(--Black102);
 }
 
 .card-l, .card-r{
@@ -185,7 +185,7 @@
   display: flex;
   align-items: center;
   gap: 28px;
-  color: #2E0D64;
+  color: var(--Purple300);
   text-align: center;
   font-family: Poppins;
   font-size: 25px;
@@ -205,28 +205,28 @@
   width: 90px;
   height: 90px;
   border-radius: 20px;
-  background: #FFF2F2;
+  background: var(--Pink101);
 }
 
 .img-box2{
   width: 90px;
   height: 90px;
   border-radius: 20px;
-  background: #E2F3FF;
+  background: var(--Grey102);
 }
 
 .img-box3{
   width: 90px;
   height: 90px;
   border-radius: 20px;
-  background: #F1E8FF;
+  background: var(--Grey103);
 }
 
 .img-box4{
   width: 90px;
   height: 90px;
   border-radius: 20px;
-  background: #FFE7FB;
+  background: var(--Purple101);
 }
 
 .email-list{
@@ -235,14 +235,14 @@
   align-items: center;
   gap: 80px;
   padding: 148px 360px;
-  background: #E8F4FA;
+  background: var(--White101);
   position: relative;
   margin-top: 86px;
 }
 
 .email-list p{
   width: 516px;
-  color: #252525;
+  color: var(--Black101);
   text-align: center;
   font-family: Poppins;
   font-size: 30px;
@@ -257,7 +257,7 @@
 }
 
 .email-list form input{
-  color: #787878;
+  color: var(--Brown101);
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
@@ -266,9 +266,9 @@
   padding-left: 36px;
   width: 532px;
   border-radius: 10px;
-  background: #FFF;
+  background: var(--White100);
   border: none;
-  box-shadow: 0px 4px 84px 0px rgba(0, 0, 0, 0.07);
+  box-shadow: 0px 4px 84px 0px var(--Black100);
 }
 
 .email-list form button{
@@ -276,8 +276,8 @@
   padding: 20px 44px;
   border: none;
   border-radius: 10px;
-  background: #000;
-  color: #FFF4F4;
+  background: var(--textBlack);
+  color: var(--White102);
   text-align: center;
   font-family: Poppins;
   font-size: 16px;
