--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,14 +3,14 @@
 }
 
 .pages ul li:nth-child(1) a {
-  color: #1090cb;
+  color: var(--mainBlue);
 }
 
 .info{
   display: flex;
   gap: 25px;
   padding: 0 195px 0 100px;
-  background-color: rgba(16, 144, 203, 0.10);
+  background-color: var(--Blue100);
 }
 
 .info-left{
@@ -27,7 +27,7 @@
 }
 
 .info-text h1{
-  color: #000;
+  color: var(--textBlack);
   font-family: Poppins;
   font-size: 40px;
   font-style: normal;
@@ -36,11 +36,11 @@
 }
 
 .info-text h1 span{
-  color: #1090CB;
+  color: var(--mainBlue);
 }
 
 .info-text p{
-  color: #5C5C5C;
+  color: var(--Brown100);
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
@@ -57,8 +57,8 @@
   cursor: pointer;
   border: none;
   border-radius: 10px;
-  background: #1090CB;
-  color: #FFF;
+  background: var(--mainBlue);
+  color: var(--White100);
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
@@ -70,9 +70,9 @@
 .info-buttons button:last-child{
   cursor: pointer;
   border-radius: 10px;
-  border: 1px solid #1090CB;
-  background: #FFF;
-  color: #1090CB;
+  border: 1px solid var(--mainBlue);
+  background: var(--White100);
+  color: var(--mainBlue);
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
@@ -99,12 +99,34 @@
   position: absolute;
   left: 490px;
   top: 180px;
+  animation-name: cuboid-animation;
+  animation-iteration-count: infinite;
+  animation-duration: 6s;
+}
+
+@keyframes cuboid-animation {
+  50%{
+    left: 470px;
+    top: 200px;
+    transform: rotate(-10deg);
+  }
 }
 
 .succlent-angle{
   position: absolute;
   left: 107px;
   top: 236px;
+  animation-name: succlent-angle-animation;
+  animation-iteration-count: infinite;
+  animation-duration: 6s;
+}
+
+@keyframes  succlent-angle-animation{
+  50%{
+    top: 225px;
+    left: 95px;
+    transform: rotate(5deg);
+  }
 }
 
 .ellipse{
@@ -114,16 +136,55 @@
   z-index: -1;
 }
 
-/* .vector2{
+.ellipse2{
   position: absolute;
-  right: 1184px;
-  top: 270px;
-} */
+  left: 0;
+  top: 120px;
+  z-index: -1;
+}
+
+.ellipse3{
+  position: absolute;
+  right: 0;
+}
+
+.ellipse4{
+  position: absolute;
+  z-index: -1;
+  left: -40px;
+}
+
+.ellipse5{
+  position: absolute;
+  right: 0;
+  top: -54px;
+  z-index: -1;
+}
+
+.ellipse6{
+  position: absolute;
+  right: 0;
+  top: 90px;
+  z-index: -1;
+}
+
+.ellipse7{
+  position: absolute;
+  left: 0;
+  bottom: -84px;
+  z-index: -1;
+}
+
+.vector2{
+  position: absolute;
+  left: 0;
+  top: 380px;
+}
 
 .vector1{
   position: absolute;
   left: 597px;
-  top: 284px;
+  top: 260px;
 }
 
 /* BOTTOM BAR */
@@ -133,7 +194,7 @@
   display: flex;
   margin-bottom: 115px;
   justify-content: space-between;
-  border-bottom: solid 0.7px #C7C7C7;
+  border-bottom: solid 0.7px var(--Grey100);
 }
 
 .bar-card{
@@ -148,7 +209,7 @@
 }
 
 .bar-card-text p:first-child{
-  color: #000;
+  color: var(--textBlack);
   font-family: Poppins;
   font-size: 20px;
   font-style: normal;
@@ -157,7 +218,7 @@
 }
 
 .bar-card-text p:last-child{
-  color: #969696;
+  color: var(--Grey101);
   font-family: Poppins;
   font-size: 15px;
   font-style: normal;
@@ -169,28 +230,28 @@
   width: 83px;
   height: 83px;
   border-radius: 20px;
-  background: #EFEAFF;
+  background: var(--White200);
 }
 
 .bar-card-img2{
   width: 83px;
   height: 83px;
   border-radius: 20px;
-  background: #ECFFDA;
+  background: var(--Green100);
 }
 
 .bar-card-img3{
   width: 83px;
   height: 83px;
   border-radius: 20px;
-  background: #DAE6FF;
+  background: var(--Blue300);
 }
 
 .bar-card-img4{
   width: 83px;
   height: 83px;
   border-radius: 20px;
-  background: #FFE5DA;
+  background: var(--Orange100);
 }
 
 .bar-card img{
@@ -217,7 +278,7 @@
 }
 
 .section1-title h2{
-  color: #252525;
+  color: var(--Black101);
   text-align: center;
   font-family: Poppins;
   font-size: 33px;
@@ -228,7 +289,7 @@
 
 .section1-title p{
   width: 692px;
-  color: #868686;
+  color: var(--Brown200);
   text-align: center;
   font-family: Poppins;
   font-size: 18px;
@@ -263,7 +324,7 @@
 }
 
 .lorem-title p:first-child{
-  color: #000;
+  color: var(--textBlack);
   font-family: Poppins;
   font-size: 17px;
   font-style: normal;
@@ -272,7 +333,7 @@
 }
 
 .lorem-title p:last-child{
-  color: #868686;
+  color: var(--Brown200);
   font-family: Poppins;
   font-size: 14px;
   font-style: normal;
@@ -282,7 +343,7 @@
 
 .lorem-par p:first-child{
   width: 516px;
-  color: #252525;
+  color: var(--Black101);
   font-family: Poppins;
   font-size: 30px;
   font-style: normal;
@@ -292,12 +353,12 @@
 }
 
 .lorem-par p span{
-  color: #1090CB;
+  color: var(--mainBlue);
 }
 
 .lorem-par p:last-child{
   width: 476px;
-  color: #545454;
+  color: var(--Brown102);
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
@@ -311,7 +372,7 @@
   width: 58px;
   height: 58px;
   border-radius: 29px;
-  background-color: #08D3BB;
+  background-color: var(--Blue200);
 }
 
 .happy img{
@@ -331,7 +392,7 @@
   width: 58px;
   height: 58px;
   border-radius: 29px;
-  background-color: #1090CB;
+  background-color: var(--mainBlue);
 }
 
 .happy2 img{
@@ -343,7 +404,7 @@
   padding: 0 123px;
   gap: 180px;
   margin-bottom: 248px;
-  /* position: relative; */
+  position: relative;
 }
 
 /* .lorem-container3 img:last-child{
@@ -359,7 +420,7 @@
   width: 58px;
   height: 58px;
   border-radius: 29px;
-  background-color: #9208D3;
+  background-color: var(--Purple100);
 }
 
 .happy3 img{
@@ -371,6 +432,7 @@
   gap: 50px;
   padding: 0 122px;
   margin-bottom: 184px;
+  position: relative;
 }
 
 .lorem-card-l{
@@ -380,7 +442,7 @@
   gap: 36px;
   padding: 64px 48px 50px 48px;
   border-radius: 20px;
-  background: #F4F4F4;
+  background: var(--White103);
 }
 
 .lorem-card-r{
@@ -390,13 +452,13 @@
   gap: 36px;
   padding: 64px 48px 50px 48px;
   border-radius: 20px;
-  background: #1090CB;
+  background: var(--mainBlue);
   position: relative;
 }
 
 .lorem-card-l-par{
   width: 476px;
-  color: #545454;
+  color: var(--Brown102);
   text-align: center;
   font-family: Poppins;
   font-size: 16px;
@@ -407,7 +469,7 @@
 
 .lorem-card-l p:first-child{
   width: 365px;
-  color: #252525;
+  color: var(--Black101);
   text-align: center;
   font-family: Poppins;
   font-size: 25px;
@@ -420,8 +482,8 @@
   cursor: pointer;
   border: none;
   border-radius: 10px;
-  background: #1090CB;
-  color: #FFF;
+  background: var(--mainBlue);
+  color: var(--White100);
   text-align: center;
   font-family: Poppins;
   font-size: 16px;
@@ -433,7 +495,7 @@
 
 .lorem-card-r p:first-child{
   width: 365px;
-  color: #FFF;
+  color: var(--White100);
   text-align: center;
   font-family: Poppins;
   font-size: 25px;
@@ -444,7 +506,7 @@
 
 .lorem-card-r-par{
   width: 476px;
-  color: #FFF;
+  color: var(--White100);
   text-align: center;
   font-family: Poppins;
   font-size: 16px;
@@ -457,8 +519,8 @@
   cursor: pointer;
   border: none;
   border-radius: 10px;
-  background: #FFF;
-  color: #1090CB;
+  background: var(--White100);
+  color: var(--mainBlue);
   text-align: center;
   font-family: Poppins;
   font-size: 16px;
@@ -472,11 +534,56 @@
   position: absolute;
   bottom: 381px;
   right: 6px;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-name: bell-animation;
+}
+
+@keyframes bell-animation {
+  10%{
+    transform: rotate(7deg);
+  }
+  20%{
+    transform: rotate(-6deg);
+  }
+  30%{
+    transform: rotate(5deg);
+  }
+  40%{
+    transform: rotate(-4deg);
+  }
+  50%{
+    transform: rotate(0deg);
+  }
+}
+
+.bell-circle {
+  width: 60px;
+  height: 70px;
+  border-radius: 50px;
+  box-shadow: 0px 0px 50px var(--Pink100);
+  position: absolute;
+  top: -26px;
+  right: 50px;
+  z-index: -1;
+  transform: rotate(30deg);
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-name: bell-circle-animation;
+}
+
+@keyframes bell-circle-animation {
+  to{
+    opacity: 0;
+  }
+  50%{
+    opacity: 1;
+  }
 }
 
 .companies-par{
   text-align: center;
-  color: #000;
+  color: var(--textBlack);
   font-family: Poppins;
   font-size: 24px;
   font-style: normal;
@@ -489,6 +596,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 12px;
+  position: relative;
 }
 
 .email-list{
@@ -497,14 +605,14 @@
   align-items: center;
   gap: 80px;
   padding: 148px 360px;
-  background: #E8F4FA;
+  background: var(--White101);
   position: relative;
   margin-top: 86px;
 }
 
 .email-list p{
   width: 516px;
-  color: #252525;
+  color: var(--Black101);
   text-align: center;
   font-family: Poppins;
   font-size: 30px;
@@ -519,7 +627,7 @@
 }
 
 .email-list form input{
-  color: #787878;
+  color: var(--Brown101);
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
@@ -528,9 +636,9 @@
   padding-left: 36px;
   width: 532px;
   border-radius: 10px;
-  background: #FFF;
+  background: var(--White100);
   border: none;
-  box-shadow: 0px 4px 84px 0px rgba(0, 0, 0, 0.07);
+  box-shadow: 0px 4px 84px 0px var(--Black100);
 }
 
 .email-list form button{
@@ -538,8 +646,8 @@
   padding: 20px 44px;
   border: none;
   border-radius: 10px;
-  background: #000;
-  color: #FFF4F4;
+  background: var(--textBlack);
+  color: var(--White102);
   text-align: center;
   font-family: Poppins;
   font-size: 16px;
