--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -3,7 +3,7 @@
 }
 
 .pages ul li:nth-child(3) a {
-    color: #1090cb;
+    color: var(--mainBlue);
 }
 
 main{
@@ -22,7 +22,7 @@ main{
   gap: 20px;
   height: 635px;
   width: 100%;
-  background: rgba(16, 144, 203, 0.10);
+  background: var(--Blue100);
 }
 
 .succlent{
@@ -40,7 +40,7 @@ main{
   width: 135px;
   height: 135px;
   border-radius: 67.5px;
-  background-color: #FFFFFF;
+  background-color: var(--White100);
 }
 
 .speaker img{
@@ -49,7 +49,7 @@ main{
 }
 
 .our-services h1{
-  color: #1090CB;
+  color: var(--mainBlue);
   font-family: Poppins;
   font-size: 40px;
   font-style: normal;
@@ -59,7 +59,7 @@ main{
 
 .our-services p{
   width: 440px;
-  color: #696969;
+  color: var(--Grey201);
   text-align: center;
   font-family: Poppins;
   font-size: 18px;
@@ -78,8 +78,8 @@ main{
   gap: 56px;
   padding: 70px 0px;
   border-radius: 10px;
-  background: #FFF;
-  box-shadow: 0px 4px 124px 0px rgba(0, 0, 0, 0.10);
+  background: var(--White100);
+  box-shadow: 0px 4px 124px 0px var(--Black102);
 }
 
 .card-l, .card-r{
@@ -91,7 +91,7 @@ main{
 .lorem-card{
   display: flex;
   gap: 28px;
-  color: #2E0D64;
+  color: var(--Purple300);
   font-family: Poppins;
   font-size: 25px;
   font-style: normal;
@@ -101,7 +101,7 @@ main{
 }
 
 .lorem-card p{
-  color: #797979;
+  color: var(--Brown103);
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
@@ -120,28 +120,28 @@ main{
   width: 90px;
   height: 90px;
   border-radius: 20px;
-  background: #FFF2F2;
+  background: var(--Pink101);
 }
 
 .img-box2{
   width: 90px;
   height: 90px;
   border-radius: 20px;
-  background: #E2F3FF;
+  background: var(--Grey102);
 }
 
 .img-box3{
   width: 90px;
   height: 90px;
   border-radius: 20px;
-  background: #F1E8FF;
+  background: var(--Grey103);
 }
 
 .img-box4{
   width: 90px;
   height: 90px;
   border-radius: 20px;
-  background: #FFE7FB;
+  background: var(--Purple101);
 }
 
 .lorem-card span{
@@ -166,7 +166,7 @@ main{
 
 .lorem-text h2{
   margin-bottom: 56px;
-  color: #1090CB;
+  color: var(--mainBlue);
   font-family: Poppins;
   font-size: 30px;
   font-style: normal;
@@ -175,11 +175,11 @@ main{
 }
 
 .lorem-text h2 span{
-  color: #1090CB;
+  color: var(--mainBlue);
 }
 
 .lorem-text p{
-  color: #545454;
+  color: var(--Brown102);
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
@@ -190,9 +190,9 @@ main{
 .lorem-text button{
   padding: 10px 52px;
   border-radius: 10px;
-  border: 1px solid #1090CB;
-  background: #FFF;
-  color: #1090CB;
+  border: 1px solid var(--mainBlue);
+  background: var(--White100);
+  color: var(--mainBlue);
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
@@ -201,7 +201,7 @@ main{
 }
 
 .stat{
-  background: #1090CB;
+  background: var(--mainBlue);
   padding: 130px 0px;
   display: flex;
   justify-content: center;
@@ -215,6 +215,27 @@ main{
   bottom: 320px;
   right: 154px;
   z-index: 1;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-name: bell-animation;
+}
+
+@keyframes bell-animation {
+  10%{
+    transform: rotate(7deg);
+  }
+  20%{
+    transform: rotate(-6deg);
+  }
+  30%{
+    transform: rotate(5deg);
+  }
+  40%{
+    transform: rotate(-4deg);
+  }
+  50%{
+    transform: rotate(0deg);
+  }
 }
 
 .vector1{
@@ -240,7 +261,7 @@ main{
 
 .stat-card{
   text-align: center;
-  color: #FFF;
+  color: var(--White100);
   font-family: Poppins;
   font-size: 65px;
   font-style: normal;
@@ -250,7 +271,7 @@ main{
 }
 
 .stat-card p{
-  color: #FFF;
+  color: var(--White100);
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
@@ -265,7 +286,7 @@ main{
 }
 
 .lorem-rectangle h4{
-  color: #000;
+  color: var(--textBlack);
   font-family: Poppins;
   font-size: 36px;
   font-style: normal;
@@ -288,7 +309,7 @@ main{
 
 .card-par{
   width: 333px;
-  color: #000;
+  color: var(--textBlack);
   font-family: Poppins;
   font-size: 23px;
   font-style: normal;
@@ -299,7 +320,7 @@ main{
 
 .last{
   width: 333px;
-  color: #424242;
+  color: var(--Grey202);
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
@@ -318,14 +339,14 @@ main{
   align-items: center;
   gap: 80px;
   padding: 148px 360px;
-  background: #E8F4FA;
+  background: var(--White101);
   position: relative;
   margin-top: 86px;
 }
 
 .email-list p{
   width: 516px;
-  color: #252525;
+  color: var(--Black101);
   text-align: center;
   font-family: Poppins;
   font-size: 30px;
@@ -340,7 +361,7 @@ main{
 }
 
 .email-list form input{
-  color: #787878;
+  color: var(--Brown101);
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
@@ -349,9 +370,9 @@ main{
   padding-left: 36px;
   width: 532px;
   border-radius: 10px;
-  background: #FFF;
+  background: var(--White100);
   border: none;
-  box-shadow: 0px 4px 84px 0px rgba(0, 0, 0, 0.07);
+  box-shadow: 0px 4px 84px 0px var(--Black100);
 }
 
 .email-list form button{
@@ -359,8 +380,8 @@ main{
   padding: 20px 44px;
   border: none;
   border-radius: 10px;
-  background: #000;
-  color: #FFF4F4;
+  background: var(--textBlack);
+  color: var(--White102);
   text-align: center;
   font-family: Poppins;
   font-size: 16px;
