--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -9,8 +9,8 @@ header{
     display: flex;
     justify-content: space-between;
     padding: 32px;
-    background: #FFF;
-    border-bottom: solid 0.7px #C4C4C4;
+    background: var(--White100);
+    border-bottom: solid 0.7px var(--Grey303);
     position: sticky;
     top: 0;
     z-index: 10;
@@ -28,7 +28,7 @@ header{
 }
 
 .logo{
-    color: #1090CB;
+    color: var(--mainBlue);
     font-family: Poppins;
     font-size: 29px;
     font-style: normal;
@@ -40,7 +40,7 @@ header{
     width: 8px;
     height: 8px;
     border-radius: 4px;
-    background-color: #08d3bb;
+    background-color: var(--Blue200);
     content: "";
     position: absolute;
     left: -9px;
@@ -64,7 +64,7 @@ header{
 }
 
 .pages ul li a{
-    color: #000;
+    color: var(--textBlack);
 
     /* Base */
     font-family: Poppins;
@@ -78,9 +78,9 @@ header{
     display: flex;
     align-items: center;
     border-radius: 6px;
-    background: #1090CB;
+    background: var(--mainBlue);
     padding: 10px 26px;
-    color: #FFF;
+    color: var(--White100);
     font-family: Poppins;
     font-size: 13px;
     font-style: normal;
@@ -104,7 +104,7 @@ header{
 }
 
 .f-logo p:first-child{
-    color: #00329B;
+    color: var(--Blue400);
     font-family: Poppins;
     font-size: 16px;
     font-style: normal;
@@ -113,7 +113,7 @@ header{
 }
 
 .f-logo p:nth-last-child(-n +2){
-    color: #515151;
+    color: var(--Grey400);
     font-family: Poppins;
     font-size: 16px;
     font-style: normal;
@@ -129,7 +129,7 @@ header{
 }
 
 .f-about-us p:first-child{
-    color: #000;
+    color: var(--textBlack);
     font-family: Poppins;
     font-size: 17px;
     font-style: normal;
@@ -138,7 +138,7 @@ header{
 }
 
 .f-about-us p:last-child{
-    color: #515151;
+    color: var(--Grey400);
     font-family: Poppins;
     font-size: 16px;
     font-style: normal;
@@ -154,7 +154,7 @@ header{
 }
 
 .f-contact-us p{
-    color: #000;
+    color: var(--textBlack);
     font-family: Poppins;
     font-size: 17px;
     font-style: normal;
@@ -169,7 +169,7 @@ header{
 }
 
 .f-contact-us-par p{
-    color: #515151;
+    color: var(--Grey400);
     font-family: Poppins;
     font-size: 16px;
     font-style: normal;
@@ -190,7 +190,7 @@ header{
     width: 34px;
     height: 34px;
     border-radius: 17px;
-    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 4px 14px var(--Black103);
 }
 
 .socials img{
@@ -201,8 +201,8 @@ header{
     display: flex;
     justify-content: center;
     padding: 28px 0;
-    border-top: solid 0.8px #D2D2D2;
-    color: #686868;
+    border-top: solid 0.8px var(--Grey401);
+    color: var(--Grey402);
     font-family: Poppins;
     font-size: 13px;
     font-style: normal;
