--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -3,6 +3,7 @@
     --Black100: rgba(0, 0, 0, 0.07);
     --Black101: #252525;
     --Black102: rgba(0, 0, 0, 0.10);
+    --Black103: rgba(0, 0, 0, 0.15);
     --Grey100: #C7C7C7;
     --Grey101: #969696;
     --Grey102: #E2F3FF;
@@ -14,10 +15,15 @@
     --Grey300: #777777;
     --Grey301: #333333;
     --Grey302: #C2C2C2;
+    --Grey303: #C4C4C4;
+    --Grey400: #515151;
+    --Grey401: #D2D2D2;
+    --Grey402: #686868;
     --mainBlue: #1090CB;
     --Blue100: rgba(16, 144, 203, 0.10);
     --Blue200: #08D3BB;
     --Blue300: #DAE6FF;
+    --Blue400: #00329B;
     --Brown100: #5C5C5C;
     --Brown101: #787878;
     --Brown102: #545454;
